<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="horizontal"
android:background="#030623"

    android:layout_marginBottom="15dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_first_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/first_team"
            android:textAlignment="center"
            android:textColor="#222788" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        >


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#7956AF"

            />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/score"
            android:textColor="#CD6103"

            />
        <TextView
            android:id="@+id/tv_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/tour"
            android:textColor="#9F61FF"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"

        >

        <TextView
            android:id="@+id/tv_sec_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec_team"
            android:textColor="#222788"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"

            />

    </LinearLayout>



</LinearLayout>